2006-07-07  Matt Wringe <mwringe@redhat.com>

	* javax/crypto/spec/PBEKeySpec.java: Updated copyright year.
	(passwordValid): New field.
	(setPassword): New method.
	(setSalt): Likewise.
	(setIterationCount): Likewise.
	(setKeyLength): Likewise.
	(PBEKeySpec(char[])): Use new setter methods.
	(PBEKeySpec(char[], byte[], int)): Likewise.
	(PBEKeySpec(char[], byte[], int, int)): Likewise.
	(clearPassword): Set passwordValid to false.
	(getPassword): Check that clearPassword() was not called earlier.
	Return a clone of the password.
	(getSalt): Return a clone of the salt if it was not null.

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(isValid): Always return false when component is
	not showing.
	(setFont): Always set font, even when setting
	the same or equal font again.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(CheckBoxMenuItemIcon): Implement UIResource,
	(FileChooserDetailViewIcon): Likewise,
	(FileChooserHomeFolderIcon): Likewise,
	(FileChooserListViewIcon): Likewise,
	(FileChooserNewFolderIcon): Likewise,
	(FileChooserUpFolderIcon): Removed redundant 'implements',
	(RadioButtonMenuItemIcon): Implement UIResource,
	(HorizontalSliderThumbIcon): Likewise,
	(InternalFrameCloseIcon): Likewise,
	(InternalFrameDefaultMenuIcon): Likewise,
	(InternalFrameAltMaximizeIcon): Likewise,
	(InternalFrameMaximizeIcon): Likewise,
	(InternalFrameMinimizeIcon): Likewise,
	(VerticalSliderThumbIcon): Likewise,
	(TreeHardDriveIcon): Likewise,
	(TreeFloppyDriveIcon): Likewise,
	(TreeComputerIcon): Likewise,
	(horizontalSliderThumbIcon): New field,
	(verticalSliderThumbIcon): New field,
	(getHorizontalSliderThumbIcon): Cache icon,
	(getVerticalSliderThumbIcon): Likewise.

2006-07-06  Mark Wielaard  <mark@klomp.org>

	* lib/Makefile.am (CLEANFILES): Add Makefile.deps.
	(DISTCLEANFILES): Add standard.omit.
	(clean-local): Remove Makefile.deps, only remove dirs.
